--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
         "command": "lemlib.codegenerator",
         "title": "Open Code Generator",
         "category": "LemLib"
+      },
+      {
+        "command": "lemlib.fieldcontrol",
+        "title": "Open Field Controller",
+        "category": "LemLib"
       }
     ]
   },
@@ -56,6 +61,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "axios": "^1.3.3"
+    "axios": "^1.3.3",
+    "serialport": "^10.5.0"
   }
 }
